<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <include layout="@layout/header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_color"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnColor1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cornerRadius="30dp"
                app:strokeColor="#777777"
                app:strokeWidth="2dp"
                android:backgroundTint="#FF0000"
                android:layout_marginEnd="12dp"
                android:insetTop="0dp"
                android:insetBottom="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnColor2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cornerRadius="30dp"
                app:strokeColor="#777777"
                app:strokeWidth="2dp"
                android:backgroundTint="#00FF00"
                android:layout_marginEnd="12dp"
                android:insetTop="0dp"
                android:insetBottom="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnColor3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cornerRadius="30dp"
                app:strokeColor="#777777"
                app:strokeWidth="2dp"
                android:backgroundTint="#0000FF"
                android:layout_marginEnd="12dp"
                android:insetTop="0dp"
                android:insetBottom="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnColor4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cornerRadius="30dp"
                app:strokeColor="#777777"
                app:strokeWidth="2dp"
                android:backgroundTint="#FFFF00"
                android:insetTop="0dp"
                android:insetBottom="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnColor5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cornerRadius="30dp"
                app:strokeColor="#777777"
                app:strokeWidth="2dp"
                android:backgroundTint="#00FFFF"
                android:layout_marginEnd="12dp"
                android:insetTop="0dp"
                android:insetBottom="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnColor6"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cornerRadius="30dp"
                app:strokeColor="#777777"
                app:strokeWidth="2dp"
                android:backgroundTint="#FF00FF"
                android:layout_marginEnd="12dp"
                android:insetTop="0dp"
                android:insetBottom="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnColor7"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cornerRadius="30dp"
                app:strokeColor="#777777"
                app:strokeWidth="2dp"
                android:backgroundTint="#000000"
                android:layout_marginEnd="12dp"
                android:insetTop="0dp"
                android:insetBottom="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnColor8"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cornerRadius="30dp"
                app:strokeColor="#777777"
                app:strokeWidth="2dp"
                android:backgroundTint="#FFFFFF"
                android:insetTop="0dp"
                android:insetBottom="0dp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">


        <Button
            android:id="@+id/btnEn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/langEn" />

        <Button
            android:id="@+id/btnIt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/langIt" />
    </LinearLayout>

</LinearLayout>